--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -1,5 +1,16 @@
 #nav {
+  margin: 0rem;
+  padding-left: 10rem;
+  padding-right: 10rem;
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
+  align-items: center;
+  min-height: 4rem;
+  background-color: rgb(39, 43, 48);
+}
+
+#nav > p {
+  color: rgb(255, 255, 255);
+  font-size: 1.5rem;
 }
