--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -2,15 +2,30 @@
   margin: 0rem;
   padding-left: 10rem;
   padding-right: 10rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
   display: flex;
   flex-direction: row;
-  justify-content: space-evenly;
+  justify-content: space-between;
   align-items: center;
   min-height: 4rem;
-  background-color: rgb(39, 43, 48);
+  background-color: rgb(255, 255, 255);
 }
 
-#nav > p {
-  color: rgb(255, 255, 255);
+#nav-text {
+  display: flex;
+  flex-direction: row;
+}
+
+#nav-text > p {
+  color: rgb(55, 55, 55);
   font-size: 1.5rem;
+  font-family: "Quicksand-Regular";
+  padding-left: 0.9rem;
+  padding-right: 0.9rem;
+}
+
+#nav > img {
+  max-width: 5rem;
+  max-height: 5rem;
 }
