--- a/src/styles/body.css
+++ b/src/styles/body.css
@@ -4,3 +4,30 @@
   display: flex;
   min-height: 30rem;
 }
+
+.body {
+  justify-content: center;
+  background-image: url("../images/autumnwood1.jpg");
+}
+
+.body > img {
+  object-fit: contain;
+}
+
+@media screen and (min-width: 601px) {
+  .body {
+    background-size: cover;
+    min-height: 40rem;
+  }
+
+  .body > img {
+    size: 120%;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .body {
+    background-size: contain;
+    min-height: 50rem;
+  }
+}
