--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -1,3 +1,4 @@
+/* desktop */
 @media screen and (min-width: 601px) {
   #nav {
     margin: 0rem;
@@ -10,7 +11,7 @@
     justify-content: space-between;
     align-items: center;
     min-height: 4rem;
-    background-color: rgb(255, 255, 255);
+    background-color: rgba(255, 255, 255, 0);
   }
 
   #nav-text {
@@ -18,23 +19,44 @@
     flex-direction: row;
   }
 
-  #nav-text > button {
+  #nav-text > p {
     background: none;
     border: none;
-    color: rgb(55, 55, 55);
+    color: rgb(255, 255, 255);
     font-size: 1.5rem;
     font-family: "Quicksand-Regular";
     padding-left: 0.9rem;
     padding-right: 0.9rem;
   }
-}
 
-@media screen and (max-width: 600px) {
-  #nav {
+  #nav > img {
+    max-width: 5rem;
+    max-height: 5rem;
   }
 }
 
-#nav > img {
-  max-width: 5rem;
-  max-height: 5rem;
+/* mobile */
+@media screen and (max-width: 600px) {
+  #nav {
+    margin: 0rem;
+    padding-left: 10%;
+    padding-right: 10%;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    min-height: 3rem;
+    /* background-color: rgba(255, 255, 255, 0); */
+  }
+
+  #nav > img {
+    max-width: 4rem;
+    max-height: 4rem;
+  }
+}
+
+#nav {
+  position: absolute;
 }
