--- a/src/styles/body.css
+++ b/src/styles/body.css
@@ -1,33 +1,29 @@
 .body {
-  margin: 0;
-  background-color: rgb(71, 100, 125);
   display: flex;
-  min-height: 30rem;
+  background-size: cover;
 }
 
 .body {
   justify-content: center;
   background-image: url("../images/autumnwood1.jpg");
+  background-position: center;
+  background-attachment: fixed;
 }
 
 .body > img {
   object-fit: contain;
 }
 
-@media screen and (min-width: 601px) {
+/* Desktop */
+@media screen and (min-width: 750px) {
   .body {
-    background-size: cover;
-    min-height: 40rem;
-  }
-
-  .body > img {
-    size: 120%;
+    min-height: 50rem;
   }
 }
 
-@media screen and (max-width: 600px) {
+/* Mobile */
+@media screen and (max-width: 750px) {
   .body {
-    background-size: contain;
-    min-height: 50rem;
+    min-height: 40rem;
   }
 }
