--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -1,62 +1,49 @@
+#nav {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(61, 61, 61);
+}
+
+.nav-text {
+  color: rgb(255, 255, 255);
+  font-size: 1.7rem;
+  font-family: "Quicksand-Regular";
+  user-select: none;
+}
+
+#nav > img {
+  user-select: none;
+}
+
 /* desktop */
-@media screen and (min-width: 601px) {
+@media screen and (min-width: 750px) {
   #nav {
-    margin: 0rem;
-    padding-left: 10%;
-    padding-right: 10%;
     padding-top: 1rem;
     padding-bottom: 1rem;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
     min-height: 4rem;
-    background-color: rgba(255, 255, 255, 0);
-  }
-
-  #nav-text {
-    display: flex;
-    flex-direction: row;
-  }
-
-  #nav-text > p {
-    background: none;
-    border: none;
-    color: rgb(255, 255, 255);
-    font-size: 1.7rem;
-    font-family: "Quicksand-Regular";
-    padding-left: 0.9rem;
-    padding-right: 0.9rem;
+    justify-content: center;
   }
 
   #nav > img {
+    margin-left: 10%;
+    margin-right: 10%;
     max-width: 5rem;
     max-height: 5rem;
   }
 }
 
 /* mobile */
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 750px) {
   #nav {
-    margin: 0rem;
-    padding-left: 10%;
-    padding-right: 10%;
     padding-top: 1rem;
     padding-bottom: 1rem;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
     min-height: 3rem;
-    /* background-color: rgba(255, 255, 255, 0); */
+    justify-content: space-evenly;
   }
 
   #nav > img {
-    max-width: 4rem;
-    max-height: 4rem;
+    max-height: 5rem;
   }
-}
-
-#nav {
-  position: absolute;
 }
