--- a/src/styles/body.css
+++ b/src/styles/body.css
@@ -1,12 +1,13 @@
 .body {
   display: flex;
   flex-direction: column;
-  background-size: cover;
   justify-content: center;
   align-items: center;
+  background-size: cover;
   background-image: url("../images/autumnwood1.jpg");
   background-position: center;
   background-attachment: fixed;
+  min-height: 80vh;
 }
 
 #order-btn {
@@ -23,18 +24,19 @@
 .body > img {
   object-fit: contain;
   max-width: 36rem;
+  user-select: none;
 }
 
 /* Desktop */
-@media screen and (min-width: 750px) {
+/* @media screen and (min-width: 750px) {
   .body {
-    min-height: 50rem;
+    min-height: 80vh;
   }
 }
 
 /* Mobile */
-@media screen and (max-width: 750px) {
+/* @media screen and (max-width: 750px) {
   .body {
-    min-height: 42rem;
+    min-height: 80vh;
   }
-}
+} */
