--- a/src/styles/faq.css
+++ b/src/styles/faq.css
@@ -1,38 +1,55 @@
 .faq {
-  display: block;
-  flex-direction: column;
-  flex-wrap: wrap;
   /* border: 1px solid black; */
+  display: flex;
+  flex-direction: column;
+  /* align-items: center; */
   border-radius: 10px;
   margin: 2rem;
   max-width: 75%;
   min-width: 75%;
 }
 
-#question {
+.question {
   font-size: 2rem;
+  align-content: center;
+  justify-content: center;
+  align-items: center;
   font-family: "Quicksand-regular";
   color: black;
-  font-size: 1.5rem;
+  z-index: 1;
 }
 
-#answer {
-  font-size: 1.5rem;
+a {
+}
+
+a > img {
+  max-height: 25px;
+  /* justify-content: center;
+  align-items: center; */
+  padding-right: 8px;
+}
+
+.answer {
   margin-top: 1rem;
   font-family: "Quicksand-regular";
   color: black;
   font-size: 1.5rem;
   white-space: pre-line;
+  z-index: -1;
+  user-select: none;
+  overflow: hidden;
 }
 
 /* Desktop */
 @media screen and (min-width: 1400px) {
   .faq {
+    max-width: 30%;
   }
 }
 
 /* Mobile */
 @media screen and (max-width: 1400px) {
   .faq {
+    max-width: 75%;
   }
 }
