--- a/src/styles/faqbody.css
+++ b/src/styles/faqbody.css
@@ -1,7 +1,18 @@
+h1 {
+  font-size: 2.4rem;
+  font-family: "Quicksand-regular";
+  font-weight: normal;
+  margin: 1rem;
+  border-bottom: 2px solid black;
+  padding-left: 15px;
+  padding-right: 15px;
+  padding-bottom: 3px;
+}
+
 .faq-body {
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
+  justify-content: center;
   align-items: center;
   flex-wrap: wrap;
   border-top: 1px solid black;
