--- a/src/styles/abouthead.css
+++ b/src/styles/abouthead.css
@@ -1,7 +1,14 @@
 .about-head {
-  display: block;
+  display: flex;
   background-image: url("../images/forest-topdown.jpg");
   background-position: center;
   background-attachment: fixed;
   background-size: cover;
+  min-height: 40vh;
+  max-height: 32vh;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  font-family: "Better-Grade";
+  font-size: 6rem;
 }
