--- a/src/styles/faq.css
+++ b/src/styles/faq.css
@@ -3,14 +3,13 @@
   display: flex;
   flex-direction: column;
   /* align-items: center; */
-  border-radius: 10px;
-  margin: 2rem;
-  max-width: 75%;
-  min-width: 75%;
+  margin: 1rem;
+  padding-bottom: 1.5rem;
+  border-bottom: 1px solid black;
 }
 
 .question {
-  font-size: 2rem;
+  font-size: 1.5rem;
   align-content: center;
   justify-content: center;
   align-items: center;
@@ -19,11 +18,8 @@
   z-index: 1;
 }
 
-a {
-}
-
 a > img {
-  max-height: 25px;
+  max-height: 20px;
   /* justify-content: center;
   align-items: center; */
   padding-right: 8px;
@@ -33,7 +29,7 @@ a > img {
   margin-top: 1rem;
   font-family: "Quicksand-regular";
   color: black;
-  font-size: 1.5rem;
+  font-size: 1.2rem;
   white-space: pre-line;
   z-index: -1;
   user-select: none;
@@ -43,7 +39,8 @@ a > img {
 /* Desktop */
 @media screen and (min-width: 1400px) {
   .faq {
-    max-width: 30%;
+    max-width: 60%;
+    min-width: 60%;
   }
 }
 
@@ -51,5 +48,6 @@ a > img {
 @media screen and (max-width: 1400px) {
   .faq {
     max-width: 75%;
+    min-width: 75%;
   }
 }
