--- a/src/styles/titlehead.css
+++ b/src/styles/titlehead.css
@@ -1,4 +1,4 @@
-.body {
+.title-head {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -14,29 +14,29 @@
   color: white;
   border: 1px solid white;
   font-family: "Quicksand-regular";
-  font-size: 1.5rem;
+  font-size: 1.3rem;
   padding: 0.5rem;
   border-radius: 8px;
   background-color: rgba(0, 0, 0, 0.344);
   user-select: none;
 }
 
-.body > img {
+.title-head > img {
   object-fit: contain;
-  max-width: 36rem;
+  max-width: 25rem;
   user-select: none;
 }
 
 /* Desktop */
 /* @media screen and (min-width: 750px) {
-  .body {
+  .title-head {
     min-height: 80vh;
   }
 }
 
 /* Mobile */
 /* @media screen and (max-width: 750px) {
-  .body {
+  .title-head {
     min-height: 80vh;
   }
 } */
