--- a/src/styles/abouthead.css
+++ b/src/styles/abouthead.css
@@ -4,8 +4,8 @@
   background-position: center;
   background-attachment: fixed;
   background-size: cover;
-  min-height: 40vh;
-  max-height: 32vh;
+  min-height: 30rem;
+  /* max-height: 32vh; */
   justify-content: center;
   align-items: center;
   color: white;
