--- a/src/styles/faq.css
+++ b/src/styles/faq.css
@@ -16,12 +16,11 @@
   font-family: "Quicksand-regular";
   color: black;
   z-index: 1;
+  -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
 }
 
 a > img {
   max-height: 20px;
-  /* justify-content: center;
-  align-items: center; */
   padding-right: 8px;
 }
 
@@ -47,7 +46,7 @@ a > img {
 /* Mobile */
 @media screen and (max-width: 1400px) {
   .faq {
-    max-width: 75%;
+    max-width: 80%;
     min-width: 75%;
   }
 }
