--- a/src/styles/titlehead.css
+++ b/src/styles/titlehead.css
@@ -7,7 +7,6 @@
   background-image: url("../images/autumnwood1.jpg");
   background-position: center;
   background-attachment: fixed;
-  /* min-height: 45rem; */
 }
 
 #order-btn {
@@ -25,6 +24,7 @@
 .title-head > img {
   object-fit: contain;
   user-select: none;
+  max-width: 100%;
 }
 
 /* Desktop */
