--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -4,17 +4,24 @@
 } */
 
 #nav {
+  padding-top: 0.7rem;
+  padding-bottom: 0.7rem;
+  text-align: center;
   border-bottom: 1px solid black;
   display: flex;
   flex-direction: row;
   align-items: center;
+  justify-content: space-evenly;
+  /* padding-right: 5%;
+  padding-left: 5%; */
+  max-height: 7vh;
+  min-height: 4vh;
   background-color: rgb(255, 255, 255);
-  justify-content: center;
-  max-width: 100%;
 }
 
 .nav-text {
   color: rgb(0, 0, 0);
+  font-size: 1.2rem;
   font-family: "Quicksand-Regular";
   user-select: none;
   -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
@@ -26,11 +33,35 @@
 }
 
 #logo1 {
+  display: none;
   object-fit: contain;
 }
 
+/* mobile */
+@media screen and (min-width: 768px) {
+  #nav {
+    padding-top: 0.7rem;
+    padding-bottom: 0.7rem;
+    text-align: center;
+    justify-content: center;
+  }
+
+  .nav-text {
+    font-size: 1.4rem;
+    padding-left: 2%;
+    padding-right: 2%;
+  }
+
+  #logo1 {
+    display: flex;
+    margin-left: 1.5%;
+    margin-right: 1%;
+    max-height: 4rem;
+  }
+}
+
 /* desktop */
-@media screen and (min-width: 751px) {
+@media screen and (min-width: 1200px) {
   #nav {
     padding-top: 1rem;
     padding-bottom: 1rem;
@@ -44,31 +75,10 @@
   }
 
   #logo1 {
-    margin-left: 5%;
-    margin-right: 5%;
-    max-width: 6rem;
-    max-height: 6rem;
-  }
-}
-
-/* mobile */
-@media screen and (max-width: 750px) {
-  #nav {
-    padding-top: 0.7rem;
-    padding-bottom: 0.7rem;
-    text-align: center;
-  }
-
-  .nav-text {
-    font-size: 1.3rem;
-    padding-left: 1.5%;
-    padding-right: 1.5%;
-  }
-
-  #logo1 {
-    display: none;
-    margin-left: 1.5%;
-    margin-right: 1%;
-    max-height: 4rem;
+    display: flex;
+    margin-left: 3%;
+    margin-right: 3%;
+    max-width: 5rem;
+    max-height: 5rem;
   }
 }
