--- a/src/styles/titlehead.css
+++ b/src/styles/titlehead.css
@@ -1,9 +1,14 @@
 .title-head {
+  width: 100%;
+  height: 80vh;
+  background-size: 250vh;
+  z-index: -1;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-size: cover;
+  /* background-size: cover; */
+  /* background-size: 350%; */
   background-image: url("../images/autumnwood1.jpg");
   background-position: center;
   background-attachment: fixed;
@@ -24,19 +29,19 @@
 .title-head > img {
   object-fit: contain;
   user-select: none;
-  max-width: 100%;
+  max-width: 80%;
 }
 
+/* tablets */
+/* @media screen and (min-width: 768px) {
+  .title-head {
+    min-height: 40rem;
+  }
+} */
+
 /* Desktop */
-@media screen and (min-width: 751px) {
+/* @media screen and (min-width: 751px) {
   .title-head {
     min-height: 48rem;
   }
-}
-
-/* Mobile */
-@media screen and (max-width: 750px) {
-  .title-head {
-    min-height: 45rem;
-  }
-}
+} */
