--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -27,17 +27,39 @@
   -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
 }
 
-#nav > img {
+img {
   user-select: none;
+  /* text-align: center; */
+  /* padding-left: 1.3%;
+  padding-right: 1.3%; */
+}
+
+/* #logo1 {
+  display: none;
+  object-fit: contain;
+} */
+
+#nav {
+  padding-top: 0.7rem;
+  padding-bottom: 0.7rem;
   text-align: center;
+  justify-content: center;
+}
+
+.nav-text {
+  font-size: 1.3rem;
+  padding-left: 2%;
+  padding-right: 2%;
 }
 
 #logo1 {
-  display: none;
-  object-fit: contain;
+  display: flex;
+  margin-left: 1.5%;
+  margin-right: 1%;
+  max-height: 4rem;
 }
 
-/* mobile */
+/* tablet */
 @media screen and (min-width: 768px) {
   #nav {
     padding-top: 0.7rem;
@@ -48,8 +70,8 @@
 
   .nav-text {
     font-size: 1.4rem;
-    padding-left: 2%;
-    padding-right: 2%;
+    padding-left: 1.3%;
+    padding-right: 1.3%;
   }
 
   #logo1 {
@@ -70,8 +92,8 @@
 
   .nav-text {
     font-size: 1.5rem;
-    padding-left: 2%;
-    padding-right: 2%;
+    padding-left: 1.3%;
+    padding-right: 1.3%;
   }
 
   #logo1 {
