working on shop page

--- a/src/styles/faqbody.css
+++ b/src/styles/faqbody.css
@@ -3,7 +3,7 @@ h1 {
   font-family: "Quicksand-regular";
   font-weight: normal;
   margin-bottom: 2rem;
-  font-style: italic;
+  /* font-style: italic; */
   text-align: center;
 }
 
